--- a/polls/templates/polls/blog.html
+++ b/polls/templates/polls/blog.html
@@ -1,18 +1,24 @@
 <html>
-
+<head>
 <style>
 body{
-background:rgb(250,100,0);
+background:rgb(243, 241, 244);
 }
 
 .first{
-background:rgb(100,200,230);
+background:rgb(253, 254, 253);
+width:100%;
+height:12%;
+
 }
 .options
 {
 height:100%;
 background:white;
-width:15%;
+min-width:80px;
+width:10%;
+float:left;
+top:15%;
 }
 .lists
 {
@@ -20,33 +26,100 @@ list-style-type:none;
 list-style-margin-left:15px;
 
 }
+.middle{
+     float:center;
+     margin-left:10%;
+	 height:50%;
 
+  }
+.create_post
+{
+width=100%;
+height=10px;
+background-color:rgb(100,100,100);
+font-size:200%;
+color:black;
+}
+a:link {
+    text-decoration: none;
+	color:rgb(150,150,150);
+}
+
+a:visited {
+    text-decoration: none;
+		color:rgb(150,150,150);
+}
+
+a:hover {
+    text-decoration: underline;
+		color:rgb(50,150,150);
+}
+
+a:active {
+    text-decoration: underline;
+		color:rgb(150,150,150);
+}
+.create_post_div
+{
+display:block;
+margin-left:1%%
+<!-- position:fixed;
+	 left:40%;
+	 top:40%;
+}
+-->
+.create_post_div_postarea
+{
+width=360px;
+min-width:360px;
+max-width: 360px;
+ height: 180px;
+ min-height:180px; 
+max-height:180px; 
+ z-index: auto;
+ position: relative; 
+ line-height: 17.1429px;
+ font-size: 12px; 
+ transition: none;
+ background: transparent !important;
+}
+<!--.submit_post_link
+{
+padding: 14px 25px;
+    color:red;
+	margin:10%;
+	text-align: center;
+    text-decoration: none;
+    background-color:black;
+    }
+-->
+.logged_in_as
+{
+font-family:Courier New;
+font-size:200%;
+font-variant:small-caps;
+color:red;
+}
 </style>
-<head>
-
 </head>
-
 <body>{% csrf_token %}
 <div align="center" class="first">
-
 <br>
-<p>HELLO WELCOME TO BLOG </p>
-<br>
+<p>HELLO WELCOME TO BEING BRO </p>
+<p>logged in as:{{user}}</p>
 </div>
-<hr>
 <div class="options" align="left">
 <list class="lists">
 <br>
-<li style="margin-left:15% " ><a href="/followers">Posts</a></li>
-<br><li style="margin-left:15%"><a href="/followers">Followers</a></li>
-<br><li style="margin-left:15%"><a href="/messages">Messages</a></li>
-<br><li style="margin-left:15%"><a href="/followers">Tags</a></li>
+<li style="margin-left:15% " ><a href="/polls/posts">Posts</a></li>
+<br><li style="margin-left:15%"><a href="/polls/followers/">Followers</a></li>
+<br><li style="margin-left:15%"><a href="/polls/messages">Messages</a></li>
+<br><li style="margin-left:15%"><a href="/polls/tags">Tags</a></li>
 </list>
 </div>
-<body>
-<div >
-<p>helloo</p>
+<div class="middle">
+{% block content%}
+{% endblock %}
+
 </div>
-
-
 </html>
