--- a/polls/templates/polls/blog.html
+++ b/polls/templates/polls/blog.html
@@ -9,16 +9,20 @@ background:rgb(243, 241, 244);
 background:rgb(253, 254, 253);
 width:100%;
 height:12%;
+position:fixed;
+top:0px;
+left:0px;
 
 }
 .options
 {
+position:fixed;
 height:100%;
 background:white;
 min-width:80px;
 width:10%;
 float:left;
-top:15%;
+top:12%;
 }
 .lists
 {
@@ -28,8 +32,12 @@ list-style-margin-left:15px;
 }
 .middle{
      float:center;
-     margin-left:10%;
-	 height:50%;
+	 height:100%;
+	 position:fixed;
+	 top:12%;
+	 left:11%;
+	 overflow:scroll;
+	 width:100%;
 
   }
 .create_post
